k8s/infra/gateway-api/gateway/envs/dev/gw-internal-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal-http
spec:
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 10.8.3.80
